fix columns on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -375,3 +375,17 @@ abbr[title]:focus::after {
   width: 20%;
   padding: 10px;
 }
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
+}
+
+/* Responsive layout - makes a one column-layout instead of a two-column layout */
+@media (max-width: 500px) {
+  .rightColumn, .leftColumn {
+    flex: 100%;
+  }
+}
